tests/expected/test_zen_gl.out
File "/media/ctw04578/data/projects/zen/zen/tests/test_zen_gl.zen", line 2
  import gl;
           ^
Error at ';': Unknown module.
zen: compilation failed.
